--- a/server/build.gradle
+++ b/server/build.gradle
@@ -16,7 +16,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1'
-    runtimeOnly 'mysql:mysql-connector-java'
+    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1')
+    compile('mysql:mysql-connector-java:5.1.40')
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compile group: 'com.alibaba', name: 'druid', version: '1.1.10'
 }
