--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    name: aimpet
+    name: shop
     url: jdbc:mysql://127.0.0.1:3306/shop?useUnicode=true&characterEncoding=utf-8
     username: root
     password: root
